tests/algorithms/transpiler/Zig/ciphers/playfair_cipher.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/ciphers/playfair_cipher.zig:44:35: error: expected expression, found 'const'